--- a/two.html
+++ b/two.html
@@ -18,7 +18,7 @@
     <script src="//cdnjs.cloudflare.com/ajax/libs/jqueryui/1.11.0/jquery-ui.js"></script>
     <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
     <script src="//cdnjs.cloudflare.com/ajax/libs/lodash.js/3.5.0/lodash.min.js"></script>
-     <script src="./node_modules/gridstack/dist/gridstack.js"></script>
+    <script src="./node_modules/gridstack/dist/gridstack.js"></script>
 
 
     <style type="text/css">
@@ -115,13 +115,18 @@
                 {x: 2, y: 3, width: 3, height: 1},
                 {x: 2, y: 5, width: 1, height: 1}
             ];
+            var outerCount = 0;	
             $('.grid-stack').each(function () {
+            	outerCount++;
                 var grid = $(this).data('gridstack');
+                var innerCount = 0;
                 _.each(items, function (node) {
-                    grid.addWidget($('<div><div class="grid-stack-item-content" /><div/>'),
-                        node.x, node.y, node.width, node.height);
+
+                	innerCount++;
+                    grid.addWidget($('<div><div class="grid-stack-item-content">' + outerCount + '.' + innerCount + '</div><div/>'), node.x, node.y, node.width, node.height);
                 }, this);
             });
+
             $('.sidebar .grid-stack-item').draggable({
                 revert: 'invalid',
                 handle: '.grid-stack-item-content',
