added responsive gridStack example

--- a/two.html
+++ b/two.html
@@ -24,9 +24,11 @@
     <style type="text/css">
         #grid1 {
             background: lightgoldenrodyellow;
+            border: dashed 2px;
         }
         #grid2 {
             background: lightcyan;
+            border: dashed 2px;
         }
         .grid-stack-item-content {
             color: #2c3e50;
